# NZSL-signbank

./: .gitignore  .osv-detector.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/plans/: taggit_migration_74b3129a.plan.md
.github/workflows/: main.yml
docs/: README.s3commands.md  s3_postgres_management_commands.md
signbank/: comments.py
signbank/dictionary/: admin.py  adminviews.py  csv_import.py  forms.py  models.py  tasks.py  update.py  views.py
signbank/dictionary/migrations/: 0051_migrate_tags_to_taggit.py  0052_migrate_allowedtags_to_taggit.py
signbank/dictionary/tests/: test_adminviews.py  test_csv_import.py  test_update.py
signbank/settings/: base.py
signbank/tagging/: __init__.py  adapter.py  apps.py  models.py
signbank/video/: admin.py  models.py  views.py
templates/: 403.html  404.html  500.html  baselayout.html  infopage.html  langbar.html  menu.html  policyconsent.html  setlang.html
templates/admin/: input_filter.html
templates/comments/: edit_comment.html  latest_comments.html  latest_comments_page.html  list.html  search_comments.html
templates/django_registration/: activate.html  activation_complete.html  activation_failed.html  registration_base.html  registration_closed.html  registration_complete.html  registration_form.html  registration_info.html  terms_of_service.html
templates/editorial_queue/: queue.html  queue_gloss_details.html
templates/flatpages/: default.html  frontpage.html  tos.html
templates/notifications/: list.html  notice.html
templates/registration/: logged_out.html  login.html
(+37 files in other folders)
