[tool.poetry]
name = "nzsl-signbank"
version = "0.1.0"
description = "Web based database for sign language lexicons and corpuses. Fork of NGT-signbank."
authors = ["Ackama <info@ackama.com>"]
license = "BSD-3-Clause license"
readme = "README.md"
homepage = "https://signbank.nzsl.nz/"
repository = "https://github.com/ODNZSL/NZSL-signbank"

[tool.poetry.dependencies]
python = "^3.12"
django = "~4.2.27"
django-tagging = { path = "./vendor/django-tagging/", develop = false }
django-reversion = "4.0.2"
django-bootstrap3 = "21.2"
django-summernote = "0.8.20.0"
django-modeltranslation = "0.18.2"
django-registration = "3.1.2"
django-contrib-comments = "2.2.0"
django-queryset-csv = "1.1.0"
django-debug-toolbar = "3.2.2"
django-guardian = "2.2.0"
django-notifications-hq = "1.7.0"
dj-database-url = "0.5.0"
boto3 = "1.39.4"
django-storages = "1.12.1"
psycopg = "^3.2.9"
certifi = "2024.7.4"
sentry-sdk = "2.8.0"
gunicorn = "23.0.0"
whitenoise = "6.2.0"
setuptools = "^80.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

